--- a/ZazBoy/Properties/Resources.resx
+++ b/ZazBoy/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="DebugText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DebugText.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="InstructionDatabase" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\InstructionDatabase.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="PauseText" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PauseText.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
