--- a/ZazBoy/Properties/Resources.resx
+++ b/ZazBoy/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="HideNavBar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HideNavBar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconPNG.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="InstructionDatabase" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\InstructionDatabase.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
